JumpScript/tests/baselines/reference/augmentedTypesEnum2.errors.txt
tests/cases/compiler/augmentedTypesEnum2.jump(2,6): error TS2300: Duplicate identifier 'e1'.
tests/cases/compiler/augmentedTypesEnum2.jump(4,11): error TS2300: Duplicate identifier 'e1'.
tests/cases/compiler/augmentedTypesEnum2.jump(11,6): error TS2300: Duplicate identifier 'e2'.
tests/cases/compiler/augmentedTypesEnum2.jump(12,7): error TS2300: Duplicate identifier 'e2'.


==== tests/cases/compiler/augmentedTypesEnum2.jump (4 errors) ====
    // enum then interface
    enum e1 { One } // error
         ~~
!!! error TS2300: Duplicate identifier 'e1'.
    
    interface e1 { // error
              ~~
!!! error TS2300: Duplicate identifier 'e1'.
        foo(): void;
    }
    
    // interface then enum works
    
    // enum then class
    enum e2 { One }; // error
         ~~
!!! error TS2300: Duplicate identifier 'e2'.
    class e2 { // error
          ~~
!!! error TS2300: Duplicate identifier 'e2'.
        foo() {
            return 1;
        }
    }
    
    //enum then enum - covered
    //enum then import - covered